--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ a, a:hover, a:focus {
 
 /*login page*/
 .login-body {    
-    background-image: url('../img/wallpaper.jpg');
+    background-image: url('../img/wallpaper.png');
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
